more spelling fixes

--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -2242,7 +2242,7 @@ claim_luvale_desc;The Luvale are a mixture of the Lozi, Lunda, Mbundu and Chokwe
 centralize_prazos_title;Centralize the Massangano;;;;;;;;;;;;;
 centralize_prazos_desc;The Massangano are a series of kingdoms of partial Portuguese descent that are on the banks of the Zambezi river, from Inhambina to Vila de Sena. Some of them are really powerful, and hold great armies, but claim partial allegiance to our state. If we want to keep our expansion in the region, we must take the Massangano and expand on the Zambezi river. Onwards!;;;;;;;;;;;;;
 centralize_prazos_songo_title;Conquer the Southern Matakenya;;;;;;;;;;;;;
-centralize_prazos_songo_desc;The Matakenya currently own Songo, which is at the end of the land we oficially claim for ourselves in the Zambezi River. We need to take such city so we can effectively occupy our claims.;;;;;;;;;;;;;
+centralize_prazos_songo_desc;The Matakenya currently own Songo, which is at the end of the land we officially claim for ourselves in the Zambezi River. We need to take such city so we can effectively occupy our claims.;;;;;;;;;;;;;
 centralize_cnr_title;Start Centralizing the Bilad as-Siba;;;;;;;;;;;;;
 centralize_cnr_desc;The Berber and Bedouin tribes of the interior claim allegiance to our kingdom, but they keep rebelling and being a weakness to our state. The Europeans use this weakness to attack us, and we must end it via exerting real control over our territory. Centralizing will be a costly and slow process, but it will be worth it.\n\n§RYou need at least 55% civilization progress, the tooltip lies.§W;;;;;;;;;;;;;
 centralize_cnr_2_b_title;Annex Guelmim;;;;;;;;;;;;;
@@ -2910,7 +2910,7 @@ INHAMINGAGONE;We can't continue control over the citizens of Inhamanga after the
 ZOMBAGONE;We can't continue control over the citizens of Zomba after the fall of the surrounding land to foreign nations.;;;;;;;;;;;;;
 EVTDESC54679070;Without a land connection to Sulina, the owners of Tulça have taken it over.;;;;;;;;;;;;;
 EVTDESC54679071;Without a land connection to Sulina, its owners can no longer defend it. We will therefore take it over.;;;;;;;;;;;;;
-SAINTHELENAEIC;With the Government of India Act of 1833, the East India Company has ceded their ownership of Saint Helena to create a new, British crown colony in the islands' honour..;;;;;;;;;;;;;
+SAINTHELENAEIC;With the Government of India Act of 1833, the East India Company has ceded their ownership of Saint Helena to create a new, British crown colony in the islands' honor.;;;;;;;;;;;;;
 WEWONBATTLEMARICOYEAHMADEUP;We have managed to win a battle near the Marico River against $FROMCOUNTRY$ and we can now settle in the plains east of it for centuries to come.;;;;;;;;;;;;;
 GREATWADKALTABUONE;The $FROMCOUNTRY_ADJ$ have accepted sending an expeditionary force to Abyssinia to pacify the region.;;;;;;;;;;;;;
 GREATWADKALTABUTWO;The $FROMCOUNTRY_ADJ$ have rejected sending an expeditionary force to Abyssinia to pacify the region.;;;;;;;;;;;;;
