--- a/GFM/localisation/LocMergeFile.csv
+++ b/GFM/localisation/LocMergeFile.csv
@@ -801,7 +801,7 @@ CONFIRM_DISBAND_TOO_SMALL_TITLE;Do you wish to disband all undermanned brigades?
 CONFIRM_DISBAND_TOO_SMALL_DESC;This will remove all brigades that are not currently supported by a full-strength soldier POP, and you will no longer have to pay any maintenance costs for them. Any manpower remaining in those brigades will be returned to the pool.;;Dies entfernt alle Brigaden, die gegenwärtig von einer zu kleinen Soldaten Bevölkerung verstärkt werden. Sie müssen keine Instandhaltungskosten mehr für sie bezahlen und alle in den Brigaden verbleibenden Soldaten kommen in den Mannstärke-Vorrat zurück.;;;;;;;;;;;
 MODIFIER_RESEARCH_POINTS_ON_CONQUER;Research points bonus when conquering;;Forschungspunkte Bonus durch Eroberung;;;;;;;;;;;
 colonial_negotiations;Colonial Negotiations;;Koloniale Verhandlungen;;;;;;;;;;;
-colonial_negotiations_desc;Whatever happens, we have got \nThe Maxim gun, and they have not'\n\n Machine Guns allowed armies to devastate forces using massed charge tactics, an ability that was especially useful when it came to defeating 'uncivilised' nations who objected to being colonised.;;Was auch immer passiert, wir haben das \nThe Maxim-Maschinengewehr, und die nicht'\n\n Die Verwendung von Maschinengewehren ermöglichte es Armeen feindliche Massenangriffe anzuwehren, eine Fähigkeit die besonders gegen die 'unzivilisierte' Nationen wirksam war, welche sich kolonialen Ansprüchen widersetzten.;;;;;;;;;;;
+colonial_negotiations_desc;Whatever happens, we have got \nThe Maxim gun, and they have not'\n\n Machine Guns allowed armies to devastate forces using massed charge tactics, an ability that was especially useful when it came to defeating 'uncivilized' nations who objected to being colonized.;;Was auch immer passiert, wir haben das \nThe Maxim-Maschinengewehr, und die nicht'\n\n Die Verwendung von Maschinengewehren ermöglichte es Armeen feindliche Massenangriffe anzuwehren, eine Fähigkeit die besonders gegen die 'unzivilisierte' Nationen wirksam war, welche sich kolonialen Ansprüchen widersetzten.;;;;;;;;;;;
 PRODUCTION_BONUS_POSSIBLE;Possible bonus from:;;Mögliche Boni durch:;;;;;;;;;;;
 COLONIZE_PHASE_INITIAL_INTEREST;Send expedition;;Expedition entsenden;;;;;;;;;;;
 COLONIZE_PHASE_INITIAL_INTEREST_DESC;The first step of influencing an area is to send an expedition. If it is not challenged in §Y$DAYS$§! days it will allow you to create a protectorate;;Der erste Schritt um Einfluss in einer Region zu erlangen ist das Entsenden einer Expedition. Falls keine andere Nation innerhalb von §Y$DAYS$§! Tagen ebenfalls Interesse anmeldet, können wir sofort ein Protektorat errichten.;;;;;;;;;;;
@@ -1261,7 +1261,7 @@ EVTNAME1998001;Pop Growth Campaign Selection;;;;;;;;;;;;;
 EVTDESC1998001;Choose the level of pop-growth campaign for your nation.;;;;;;;;;;;;;
 #Additional Decisions;;;;;;;;;;;;;;
 rgo_change_mining_title;Change Mining RGO;;;;;;;;;;;;;
-rgo_change_mining_desc;Allows the switching of a single RGO province of the following types: Coal, Iron, Sulfur, or Precious Metal into Coal, Iron, or Sulphur. Causes a cooldown of 25 years.;;;;;;;;;;;;;
+rgo_change_mining_desc;Allows the switching of a single RGO province of the following types: Coal, Iron, Sulfur, or Precious Metal into Coal, Iron, or Sulfur. Causes a cooldown of 25 years.;;;;;;;;;;;;;
 rgo_change_agriculture_title;Change Agriculture RGO;;;;;;;;;;;;;
 rgo_change_agriculture_desc;Allows the switching of a single RGO province of the following types: Grain, Fruit, Fish, Cattle, Wool, Cotton, Timber, or Precious Goods into Grain, Fruit, Fish, Cattle, Wool, Cotton, or Timber. Causes a cool down of 12.5 years.;;;;;;;;;;;;;
 infamy_for_growth_selector_title;Commence a Population Growth Campaign;;;;;;;;;;;;;
@@ -1674,7 +1674,7 @@ PAC_semi_constitutional_empire;The Empire of Pacifica;;;;;;;;;;;;;
 PAC_constitutional_empire;The Empire of Pacifica;;;;;;;;;;;;;
 PAC_democracy;The Pacific States;;;;;;;;;;;;;
 pacifican;Pacifican;;;;;;;;;;;;;
-#State Localisations - Africa;;;;;;;;;;;;;;
+#State Localizations - Africa;;;;;;;;;;;;;;
 #############################################;;;;;;;;;;;;;;
 ITA_1848;Habesh;;;;;;;;;;;;;
 ETH_1864;Galla;;;;;;;;;;;;;
@@ -1749,17 +1749,17 @@ EGY_1827;Sudan;;;;;;;;;;;;;
 MAD_2115;Merina;;;;;;;;;;;;;
 MAD_2119;Betsimisaraka;;;;;;;;;;;;;
 MAD_2122;Sakalava;;;;;;;;;;;;;
-#State Localisations - Ottoman Empire and Middle East;;;;;;;;;;;;;;
+#State Localizations - Ottoman Empire and Middle East;;;;;;;;;;;;;;
 TUR_873;Konya;;;;;;;;;;;;;
 TUR_889;Diyarbakir;;;;;;;;;;;;;
 TUR_913;Levantine Coast;;;;;;;;;;;;;
 TUR_902;Syria;;;;;;;;;;;;;
 EGY_1757;Suez;;;;;;;;;;;;;
-#State Localisations - Arabia;;;;;;;;;;;;;;
+#State Localizations - Arabia;;;;;;;;;;;;;;
 YEM_1173;Hadramaut;;;;;;;;;;;;;
 NEJ_1160;Rub al-Khali;;;;;;;;;;;;;
 NEJ_1157;Nejd;;;;;;;;;;;;;
-#State Localisations - Pacific;;;;;;;;;;;;;;
+#State Localizations - Pacific;;;;;;;;;;;;;;
 HAW_658;Hawaiian Islands;;;;;;;;;;;;;
 NET_1454;Western New Guinea;;;;;;;;;;;;;
 USA_2623;Midway;;;;;;;;;;;;;
@@ -1774,13 +1774,13 @@ ENG_2540;Tonga;;;;;;;;;;;;;
 ENG_2541;Western Polynesia;;;;;;;;;;;;;
 ENG_2545;Central Polynesia;;;;;;;;;;;;;
 ENG_2552;Pitcairn Island;;;;;;;;;;;;;
-#State Localisations - East Indies;;;;;;;;;;;;;;
+#State Localizations - East Indies;;;;;;;;;;;;;;
 NET_1399;Palembang;;;;;;;;;;;;;
 NET_1414;West Java;;;;;;;;;;;;;
 NET_1417;East Java;;;;;;;;;;;;;
 NET_1430;Sulawesi;;;;;;;;;;;;;
 POR_1446;Timor;;;;;;;;;;;;;
-#State Localisations - Europe;;;;;;;;;;;;;;
+#State Localizations - Europe;;;;;;;;;;;;;;
 ENG_854;Malta;;;;;;;;;;;;;
 ENG_264;Leinster;;;;;;;;;;;;;
 ENG_301;Kent;;;;;;;;;;;;;
@@ -1792,15 +1792,15 @@ AUS_736;Küstenland;;;;;;;;;;;;;
 AUS_778;Istria;Istrie;Istrien;;Istria;;;;;;;;;
 AUS_781;North Dalmatia;La Dalmatie du Nord;Nord-Dalmatien;;Dalmacia del norte;;;;;;;;;
 AUS_780;Dalmatien;Dalmatie du Sud;Süd-Dalmatien;;Dalmacia del sur;;;;;;;;;
-#State Localisations - Italy;;;;;;;;;;;;;;
+#State Localizations - Italy;;;;;;;;;;;;;;
 ITA_753;Abruzzo-Marche;;;;;;;;;;;;;
-#State Localisations - Germany;;;;;;;;;;;;;;
+#State Localizations - Germany;;;;;;;;;;;;;;
 HAN_536;Hannover-Brunswick;;;;;;;;;;;;;
 HAM_528;Lower Elbe;;;;;;;;;;;;;
 GER_533;Heligoland;;;;;;;;;;;;;
 MEC_545;Mecklenburg;;;;;;;;;;;;;
 PRU_679;Hinterpommern;Poméranie plus loin;Hinterpommern;;Más adelante Pomerania;;;;;;;;;
-#State Localisations - Russia;;;;;;;;;;;;;;
+#State Localizations - Russia;;;;;;;;;;;;;;
 RUS_2622;Chukotka;;;;;;;;;;;;;
 RUS_2647;Indigirka;;;;;;;;;;;;;
 RUS_2673;Olenyok;;;;;;;;;;;;;
@@ -1814,8 +1814,7 @@ RUS_1074;Kamchatka;;;;;;;;;;;;;
 RUS_1075;Irkutsk;;;;;;;;;;;;;
 RUS_1063;Tomsk;;;;;;;;;;;;;
 RUS_1058;Ural;;;;;;;;;;;;;
-#State Localisations - Scandinavia;;;;;;;;;;;;;;
-#State Localisations - China;;;;;;;;;;;;;;
+#State Localizations - China;;;;;;;;;;;;;;
 CHI_1481;Port Arthur;;;;;;;;;;;;;
 CHI_1569;Weihaiwei;;;;;;;;;;;;;
 CHI_1566;Tsingtao;;;;;;;;;;;;;
@@ -1824,20 +1823,20 @@ CHI_1608;Ningpo;;;;;;;;;;;;;
 PROV1608;Ningpo;;;;;;;;;;;;;
 CHI_1501;Hainan;;;;;;;;;;;;;
 CHI_3249;Guangzhouwan;;;;;;;;;;;;;
-#State Localisations - Japan;;;;;;;;;;;;;;
+#State Localizations - Japan;;;;;;;;;;;;;;
 JAP_1645;Hokuriku;;;;;;;;;;;;;
 JAP_1678;Okinawa;;;;;;;;;;;;;
-#State Localisations - North America;;;;;;;;;;;;;;
+#State Localizations - North America;;;;;;;;;;;;;;
 ENG_71;Maritimes;;;;;;;;;;;;;
-#State Localisations - Central America;;;;;;;;;;;;;;
+#State Localizations - Central America;;;;;;;;;;;;;;
 UCA_2192;San Salvador;;;;;;;;;;;;;
 CLM_1724;Balboa;;;;;;;;;;;;;
-#State Localisations - South America;;;;;;;;;;;;;;
+#State Localizations - South America;;;;;;;;;;;;;;
 BRZ_2422;Goiás;;;;;;;;;;;;;
 BRZ_2427;Piaui;;;;;;;;;;;;;
 PEU_2295;Lima;;;;;;;;;;;;;
 PEU_2302;Ucayali y Cusco;;;;;;;;;;;;;
-#State Localisations - Mexico;;;;;;;;;;;;;;
+#State Localizations - Mexico;;;;;;;;;;;;;;
 MEX_2137;Sonora y Baja;;;;;;;;;;;;;
 MEX_2166;Sinaloa y Jalisco;;;;;;;;;;;;;
 MEX_2158;Zacatecas;;;;;;;;;;;;;
@@ -1957,7 +1956,7 @@ Coal-fired_powerplant_desc;Most of the world's electricity is produced by burnin
 Petrolium-based_powerplant;Petroleum-Based Power Plant;;;;;;;;;;;;;
 Petrolium-based_powerplant_desc;As coal can be burned in a power plant to produce electricity, so can petroleum.;;;;;;;;;;;;;
 stock_exchange;Stock Exchange;;;;;;;;;;;;;
-stock_exchange_desc;Stock exchanges provide a market for the brokerage and trade of stocks and secrities. They generally offer a wide range of different financial securities.;;;;;;;;;;;;;
+stock_exchange_desc;Stock exchanges provide a market for the brokerage and trade of stocks and securities. They generally offer a wide range of different financial securities.;;;;;;;;;;;;;
 commercial_focus;Commercial Focus;;;;;;;;;;;;;
 boots;Boots;;;;;;;;;;;;;
 shoes;Shoes;;;;;;;;;;;;;
@@ -2030,7 +2029,7 @@ steel_machine_parts_factory_desc;Machine parts are very important tools for ever
 begin_book_burn_title;Start a Book Burn;;;;;;;;;;;;;
 begin_book_burn_desc;Dangerous ideas are spreading through books preaching false beliefs. We must rid our society of these elements by starting a book burn where every citizen is encouraged to throw a malicious book into a fire. This will surely hurt our prestige as we are destroying our very own literature but it will help us curtail our population in the future.;;;;;;;;;;;;;
 begin_relentless_progress_title;Start a Societal Revolution;;;;;;;;;;;;;
-begin_relentless_progress_desc;Our people need our hand to guide them, and we must use every means possible to help them. We must start a revolution in our society where we enitrely change our ways of life, in accordance with socialist values. Progress must be made, no matter the cost.;;;;;;;;;;;;;
+begin_relentless_progress_desc;Our people need our hand to guide them, and we must use every means possible to help them. We must start a revolution in our society where we entirely change our ways of life, in accordance with socialist values. Progress must be made, no matter the cost.;;;;;;;;;;;;;
 AIN_radical;Radical Faction;;;;;;;;;;;;;
 ARB;Arabia;;;;;;;;;;;;;
 ARB_ADJ;Arabian;;;;;;;;;;;;;
@@ -2235,7 +2234,7 @@ EVT110088OPTA;Support his effort!;;;;;;;;;;;;;
 EVT110088OPTB;Give him an official acknowledgment.;;;;;;;;;;;;;
 EVT110088OPTC;Interesting I'm sure...;;;;;;;;;;;;;
 EVTNAME110089;The $CAPITAL$ Convention on the South Tirol Dispute;;;;;;;;;;;;;
-EVTDESC110089;$FROMCOUNTRY_ADJ$ diplomats arrived today in $CAPITAL$ for the biggest breakthrough in $COUNTRY_ADJ$-$FROMCOUNTRY_ADJ$ relationship in decades: a convention on the future of South Tirol, a territory both governments claim. We have to set a position and negotiate aggressively lest talks break and raise the spectre of total war with $FROMCOUNTRY$.;;;;;;;;;;;;;
+EVTDESC110089;$FROMCOUNTRY_ADJ$ diplomats arrived today in $CAPITAL$ for the biggest breakthrough in $COUNTRY_ADJ$-$FROMCOUNTRY_ADJ$ relationship in decades: a convention on the future of South Tirol, a territory both governments claim. We have to set a position and negotiate aggressively lest talks break and raise the specter of total war with $FROMCOUNTRY$.;;;;;;;;;;;;;
 EVT110089OPTA;There can be no compromise. South Tirol is $COUNTRY_ADJ$!;;;;;;;;;;;;;
 EVT110089OPTB;Propose that we split the state, and that the minorities have their rights respected. §GLose 1 infamy§W;;;;;;;;;;;;;
 EVT110089OPTC;A population and province exchange is needed to settle this once and for all.;;;;;;;;;;;;;
@@ -2268,7 +2267,7 @@ maroon;Maroon;;;;;;;;;;;;;
 early_archaeology;Early Archaeology;;;;;;;;;;;;;
 early_archaeology_desc;Archaeology is the study of human activity, primarily through the recovery and analysis of the material culture and environmental data that they have left behind, which includes artifacts, architecture, biofacts and cultural landscapes (the archaeological record). Study of human antiquity date back in the days of the Renaissance, but in the 19th century, Archaeology evolved to a real science. Archaeologists began to investigate various areas around the world, with the study of ancient Aegean civilization being stimulated by the excavations of Heinrich Schliemann at Troy, and of Arthur Evans at Crete, whilst John Lloyd Stephens was a pivotal figure in the rediscovery of Maya civilization throughout Central America. However, the methodologies employed by these archaeologists were highly flawed by the standards of the 20th century.;;;;;;;;;;;;;
 modern_archaeology;Modern Archaeology;;;;;;;;;;;;;
-modern_archaeology_desc;Further advancements in archaeological field methodology arose in the late 19th century. One of the pioneering figures in this was Augustus Pitt Rivers, who meticulously excavated on Cranborne Chase in southern England, emphasising that it was not only items of beauty or value that should be recorded but mundane items as well. He therefore helped to differentiate archaeology from antiquarianism. Flinders Petrie introduced systematic methodology in archaeology and preservation of artifacts. Archaeologists - once nothing more than tomb raiders - became reputable scientists.;;;;;;;;;;;;;
+modern_archaeology_desc;Further advancements in archaeological field methodology arose in the late 19th century. One of the pioneering figures in this was Augustus Pitt Rivers, who meticulously excavated on Cranborne Chase in southern England, emphasizing that it was not only items of beauty or value that should be recorded but mundane items as well. He therefore helped to differentiate archaeology from antiquarianism. Flinders Petrie introduced systematic methodology in archaeology and preservation of artifacts. Archaeologists - once nothing more than tomb raiders - became reputable scientists.;;;;;;;;;;;;;
 MODIFIER_DEBT_DEFAULT_TO;Debt Default To;;;;;;;;;;;;;
 generalised_debt_default;Generalized Debt Default;;;;;;;;;;;;;
 MODIFIER_GENERALISED_DEBT_DEFAULT;Generalized Debt Default;;;;;;;;;;;;;
@@ -2582,10 +2581,10 @@ crusade_for_canada;Canada War;;;;;;;;;;;;;
 crusade_for_canada_desc;Enforce a scripted peace deal on $RECIPIENT$;;;;;;;;;;;;;
 crusade_for_canada_short;Force another §Ycountry§W to accept a scripted peace deal;;;;;;;;;;;
 crusade_for_canada_setup;Enforce peace deal on $RECIPIENT$;;;;;;;;;;;;;
-expand_collectivisation_title;Expand Collectivisation;;;;;;;;;;;;;
-expand_collectivisation_desc;Some provinces have not yet embraced collectivisation, we must change this.;;;;;;;;;;;;;
-collectivisation;Collectivisation;;;;;;;;;;;;;
-collectivisation_desc;This province practices collectivised farming.;;;;;;;;;;;;;
+expand_collectivisation_title;Expand Collectivization;;;;;;;;;;;;;
+expand_collectivisation_desc;Some provinces have not yet embraced collectivization, we must change this.;;;;;;;;;;;;;
+collectivisation;Collectivization;;;;;;;;;;;;;
+collectivisation_desc;This province practices collectivized farming.;;;;;;;;;;;;;
 exclusive_acquire_all_cores_CB;Exclusive Acquire Cores CB;;;;;;;;;;;;;
 exclusive_humiliate_CB;Exclusive Humiliate CB;;;;;;;;;;;;;
 exclusive_liberate_country_CB;Exclusive Liberation CB;;;;;;;;;;;;;
