--- a/GFM/localisation/0000Trigori_text.csv
+++ b/GFM/localisation/0000Trigori_text.csv
@@ -623,3 +623,7 @@ EVTDESC31500012;As the dust settles, we begin to transition our provisional gove
 UBD_colonial_company_4;Riga;;;;;;;;;;;;;
 WUR;Württemberg;;;;;;;;;
 LUB;Lübeck;;;;;;;;;
+LSK_reactionary_company;Orthodox Church;;;;;;;;;;;;;
+LSK_conservative_company;Company Rule;;;;;;;;;;;;;
+LSK_liberal_company;Petersburg Shareholders;;;;;;;;;;;;;
+LSK_radical_company;Promyshlenniki;;;;;;;;;;;;;
