--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -1473,10 +1473,10 @@ LPL_prussian_constitutionalism;The Kingdom of La Plata;;;;;;;;;;;;;
 LPL_hms_government;The Kingdom of La Plata;;;;;;;;;;;;;
 LSK;Alaska;;;;;;;;;;;;;
 LSK_ADJ;Alaskan;;;;;;;;;;;;;
-LSK_reactionary;Nationalist Party;;;;;;;;;;;;;
-LSK_conservative;Democratic Party;;;;;;;;;;;;;
-LSK_liberal;Republican Party;;;;;;;;;;;;;
-LSK_radical;Liberal Economists;;;;;;;;;;;;;
+LSK_reactionary;Christian Party;;;;;;;;;;;;;
+LSK_conservative;Conservative Party;;;;;;;;;;;;;
+LSK_liberal;Liberal Party;;;;;;;;;;;;;
+LSK_radical;Revolutionary Party;;;;;;;;;;;;;
 LSK_socialist;Socialist Party;;;;;;;;;;;;;
 LSK_communist;Bolsheviks;;;;;;;;;;;;;
 LSK_fascist;Northern Futurists;;;;;;;;;;;;;
