stop being french

--- a/GFM/localisation/00_Francemod.csv
+++ b/GFM/localisation/00_Francemod.csv
@@ -89,19 +89,10 @@ OCC_radical;Partit Anarquisto;Partit Anarquisto;Partit Anarquisto;;Partit Anarqu
 OCC_communist;Partit Comunisto;Partit Comunisto;Partit Comunisto;;Partit Comunisto;;;;;;;;;
 OCC_fascist;Partit Faissisto;Partit Faissisto;Partit Faissisto;;Partit Faissisto;;;;;;;;;
 ULA;Louisiana;;;;;;;;;;;;;
-ULA_dominion;Dominion de Louisiane;;;;;;;;;;;;;
-ULA_absolute_monarchy;Dominion de Louisiane;;;;;;;;;;;;;
-ULA_prussian_constitutionalism;Dominion de Louisiane;;;;;;;;;;;;;
-ULA_hms_government;Dominion de Louisiane;;;;;;;;;;;;;
-ULA_democracy;Louisiane;;;;;;;;;;;;;
-ULA_proletarian_dictatorship;Commune de Louisiane;;;;;;;;;;;;;
-ULA_presidential_dictatorship;Louisiane Republique;;;;;;;;;;;;;
-ULA_parliamentary_republic;Louisiane Republique;;;;;;;;;;;;;
-ULA_fascist_dictatorship;Louisiane Republique;;;;;;;;;;;;;
 ULA_ADJ;Louisianan;;;;;;;;;;;;;
-ACA;Acadie;;;;;;;;;;;;;
+ACA;Acadia;;;;;;;;;;;;;
 ACA_ADJ;Acadien;;;;;;;;;;;;;
-QUE_absolute_empire;Republique du Canada;;;;;;;;;;;;;
+QUE_absolute_empire;Canada;;;;;;;;;;;;;
 QUE_absolute_empire_ADJ;Canadien;;;;;;;;;;;;;
 EVTNAME7790011;The Treaty of Waitangi;;;;;;;;;;;;;
 EVTOPTA7790011;We shall recognize the British claims.;;;;;;;;;;;;;
