russian romania flags

--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -602,3 +602,7 @@ CLC_colonial_company;Cilicia;;;;;;;;;;;;;
 CLC_colonial_company_2;Cilicie;;;;;;;;;;;;;
 CLC_colonial_company_3;Kilikien;;;;;;;;;;;;;
 CLC_colonial_company_4;Cilicia;;;;;;;;;;;;;
+ROM_colonial_company_4;Rumyniya;;;;;;;;;;;;;
+WAL_colonial_company_4;Valakhiya;;;;;;;;;;;;;
+MOL_colonial_company_4;Moldaviya;;;;;;;;;;;;;
+SIE_colonial_company_4;Transilvaniya;;;;;;;;;;;;;
