--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -603,3 +603,4 @@ CLC_colonial_company_2;Cilicie;;;;;;;;;;;;;
 CLC_colonial_company_3;Kilikien;;;;;;;;;;;;;
 CLC_colonial_company_4;Cilicia;;;;;;;;;;;;;
 INL_colonial_company;United Indian Tribes;;;;;;;;;;;;;
+CHE_colonial_company;Cherokee Protectorate;;;;;;;;;;;;;
