--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -604,3 +604,4 @@ CLC_colonial_company_3;Kilikien;;;;;;;;;;;;;
 CLC_colonial_company_4;Cilicia;;;;;;;;;;;;;
 INL_colonial_company;United Indian Tribes;;;;;;;;;;;;;
 CHE_colonial_company;Cherokee Protectorate;;;;;;;;;;;;;
+CHE_colonial_company;Metis Protectorate;;;;;;;;;;;;;
