--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -604,4 +604,5 @@ CLC_colonial_company_3;Kilikien;;;;;;;;;;;;;
 CLC_colonial_company_4;Cilicia;;;;;;;;;;;;;
 INL_colonial_company;United Indian Tribes;;;;;;;;;;;;;
 CHE_colonial_company;Cherokee Protectorate;;;;;;;;;;;;;
-CHE_colonial_company;Metis Protectorate;;;;;;;;;;;;;
+MTC_colonial_company;Metis Protectorate;;;;;;;;;;;;;
+BLK_colonial_company;Blackfoot Protectorate;;;;;;;;;;;;;
