Crow/Absaroka flags + Semirechye typo fix

--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -4332,15 +4332,16 @@ TRI_constitutional_empire;Tripoli;;;;;;;;;;;;;
 TRI_constitutional_empire_ADJ;Tripolitanian;;;;;;;;;;;;;
 TRI_democracy;Tripolitanian Republic;;;;;;;;;;;;;
 TRI_democracy_ADJ;Tripolitanian;;;;;;;;;;;;;
-CRW;Crow;;;;;;;;;;;;;
+CRW;Absaroka;;;;;;;;;;;;;
 CRW_ADJ;Apsáalooke;;;;;;;;;;;;;
+CRW_absolute_monarchy;Crow;;;;;;;;;;;;;
 PAW;Pawnee;;;;;;;;;;;;;
 PAW_ADJ;Chatiks;;;;;;;;;;;;;
 KSJ;East Kazakhstan;;;;;;;;;;;;;
 KSJ_absolute_monarchy;The Senior Jüz;;;;;;;;;;;;;
 KSJ_ADJ;Senior Kazakh;;;;;;;;;;;;;
 KAZ_proletarian_dictatorship;SSR Kazakhstan;RSS Kazakhstan;SSR Kasachstan;SSR Kazachstan;SSR Kazajstán;RSS Kazaca;SSR Kazahsztán;SSR Kazachstán;SSR Kazahsztán;SSR Kazachstan;SSR Cazaquistão;ÑÑÐ Êàçàõñòàí;SSR Kazakstan;
-KAZ_radical_republic;The Semireyche Republic;;;;;;;;;;;;;
+KAZ_radical_republic;The Semirechye Republic;;;;;;;;;;;;;
 ADL;Adal;;;;;;;;;;;;;
 ADL_absolute_monarchy;The Adal Sultanate;;;;;;;;;;;;;
 ADL_prussian_constitutionalism;The Adal Sultanate;;;;;;;;;;;;;
