Shorter Colorado so it can maybe appear on map

--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -2405,7 +2405,7 @@ UIL_radical;Libertarian Party;;;;;;;;;;;;;
 UIL_socialist;Socialist Party;;;;;;;;;;;;;
 UIL_communist;Industrial Workers of the World;;;;;;;;;;;;;
 UIL_fascist;Supremacy Party;;;;;;;;;;;;;
-UNB;The Colorado Republic;;;;;;;;;;;;;
+UNB;Colorado;;;;;;;;;;;;;
 UNB_absolute_monarchy;Tsitsista;;;;;;;;;;;;;
 UNB_absolute_monarchy_ADJ;Tsêhéstâhese;;;;;;;;;;;;;
 UNB_prussian_constitutionalism;Tsitsista;;;;;;;;;;;;;
