pawnee and absaroka

--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -606,3 +606,5 @@ INL_colonial_company;United Indian Tribes;;;;;;;;;;;;;
 CHE_colonial_company;Cherokee Protectorate;;;;;;;;;;;;;
 MTC_colonial_company;Metis Protectorate;;;;;;;;;;;;;
 BLK_colonial_company;Blackfoot Protectorate;;;;;;;;;;;;;
+CRW_colonial_company;Absaroka Protectorate;;;;;;;;;;;;;
+PAW_colonial_company;Pawnee Protectorate;;;;;;;;;;;;;
