--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -608,3 +608,4 @@ MTC_colonial_company;Metis Protectorate;;;;;;;;;;;;;
 BLK_colonial_company;Blackfoot Protectorate;;;;;;;;;;;;;
 CRW_colonial_company;Absaroka Protectorate;;;;;;;;;;;;;
 PAW_colonial_company;Pawnee Protectorate;;;;;;;;;;;;;
+UNB_colonial_company;Dominion of Colorado;;;;;;;;;;;;;
