deseret and comanche

--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -609,3 +609,5 @@ BLK_colonial_company;Blackfoot Protectorate;;;;;;;;;;;;;
 CRW_colonial_company;Absaroka Protectorate;;;;;;;;;;;;;
 PAW_colonial_company;Pawnee Protectorate;;;;;;;;;;;;;
 UNB_colonial_company;Dominion of Colorado;;;;;;;;;;;;;
+COM_colonial_company;Comanche Protectorate;;;;;;;;;;;;;
+DES_colonial_company;Union of Deseret;;;;;;;;;;;;;
