--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -611,3 +611,4 @@ PAW_colonial_company;Pawnee Protectorate;;;;;;;;;;;;;
 UNB_colonial_company;Dominion of Colorado;;;;;;;;;;;;;
 COM_colonial_company;Comanche Protectorate;;;;;;;;;;;;;
 DES_colonial_company;Union of Deseret;;;;;;;;;;;;;
+YAN_colonial_company;Yaqui Protectorate;;;;;;;;;;;;;
