finishing the typo elimination

--- a/GFM/localisation/00_GSG_decisions.csv
+++ b/GFM/localisation/00_GSG_decisions.csv
@@ -165,7 +165,7 @@ unite_romania_without;Unite Romania;;;;;;;;;;;;;
 unite_romania_without_desc;The territory of the Romanian peoples is now under our control. Perhaps we can unite it in order to block other nations from getting a foothold in this area, but we have to be careful that it does not fall out of our grasp.;;;;;;;;;;;;;
 unite_romania_without_title;Unite Romania;;;;;;;;;;;;;
 unite_yugoslavia_without;Unite Yugoslavia;;;;;;;;;;;;;
-unite_yugoslavia_without_desc;The slavic peoples of the Balkans are obviously yearning to be united. Perhaps we can push them on towards this goal, if just to better control them.;;;;;;;;;;;;;
+unite_yugoslavia_without_desc;The Slavic peoples of the Balkans are obviously yearning to be united. Perhaps we can push them on towards this goal, if just to better control them.;;;;;;;;;;;;;
 unite_yugoslavia_without_title; Unite Yugoslavia;;;;;;;;;;;;;
 transition_to_soviet_union;Become the Soviet Union;;;;;;;;;;;;;
 transition_to_soviet_union_desc;Now that the Worker's Revolution has been carried out in our country, we can throw off the previous fascist and monarchist symbols of our glorious country and take up the symbols of the global revolution! This self-legitimization will, of course, harm our relations with the bourgeoise countries, but they shall feel the sting of the revolution in due time.;;;;;;;;;;;;;
