--- a/GFM/localisation/LocMergeFile.csv
+++ b/GFM/localisation/LocMergeFile.csv
@@ -67,7 +67,7 @@ EVTDESC101535;By our refusal to ratify reforms that many Hungarians have wanted 
 EVTNAME101536;Frantisek Palacky and the Czech National Revival;;;;;;;;;;;;;
 EVTDESC101536;Considered one of the fathers of modern Czech nation, Palacky played a leading role in the Czech cultural and national revival of the early nineteenth century. At first a proponent of Austro-Slavism, a view that advocated unification and autonomy of Slavs within the framework of the Habsburg monarchy, Palacky later called for complete Czech independence. Palacky's greatest literary contribution was his History of Bohemia, which significantly influenced growing Czech national consciousness as it saw the history of Bohemia as a constant struggle of Germans and Slavs.;;;;;;;;;;;;;
 EVTNAME101537;France Preseren and the Slovenian National Awakening;;;;;;;;;;;;;
-EVTDESC101537;A key figure in the development of Slovene nationalism, Preseren led a movement to promote the use of Slovene instead of German at a time when Slovene was dismissed by the Austrian ruling elite as a peasant language, and was not taught in schools. A skilled poet, his works include Zdravljica, which was censored at the time for its national and pan-Slavic message.;;;;;;;;;;;;;
+EVTDESC101537;A key figure in the development of Slovene nationalism, Preseren led a movement to promote the use of Slovene instead of German at a time when Slovene was dismissed by the Austrian ruling elite as a peasant language, and was not taught in schools. A skilled poet, his works include Zdravljica, which was censored at the time for its national and Pan-Slavic message.;;;;;;;;;;;;;
 provincial_drought;Provincial Droughts;;;;;;;;;;;;;
 # Flavor Events;;;;;;;;;;;;;;
 EVTNAME146604;The Tango;;;;;;;;;;;;;
