--- a/GFM/localisation/0000Trigori_text.csv
+++ b/GFM/localisation/0000Trigori_text.csv
@@ -251,8 +251,8 @@ CHE_allow_settlers_title;Allow Settlers;;;;;;;;;;;;;
 CHE_allow_settlers_desc;Due to many previous experiences in the past, settlers were no longer welcome in our lands. However, now that our population has greatly risen and we have established proper administration throughout the country, some voices are beginning to debate allowing settlement. They claim that we would now have the means to control this influx properly and that many of our great leaders have already had European ancestry. A set of laws would have to be passed on various levels of the government, but in the end, it is all up to us. Shall we reopen our land for settlement?;;;;;;;;;;;;;
 CHE_birth_more_2_flag;Urbanization has been accomplished.;;;;;;;;;;;;;
 indian_conf;Confederated Tribes;;;;;;;;;;;;;
-KUK_radical_republic;The Dual Republic;;;;;;;;;;;;;;;;;;;;;;;x;;;;
-DNB_radical_republic;The United States of Europe;;;;;;;;;;;;;;;;;;;;;;;x;;;;
+KUK_radical_republic;The Dual Republic;;;;;;;;;;;;;
+DNB_radical_republic;The United States of Europe;;;;;;;;;;;;;
 ABU_democracy;al-Hejer;;;;;;;;;;;;;
 ABU_democracy_ADJ;Hejeri;;;;;;;;;;;;;
 ABU_presidential_dictatorship;al-Hejer;;;;;;;;;;;;;
