--- a/GFM/localisation/00_GSG_decisions.csv
+++ b/GFM/localisation/00_GSG_decisions.csv
@@ -2,7 +2,7 @@ Key;English;French;German;Polish;Spanish;Italian;Swedish;Czech;Hungarian;Dutch;P
 law_of_guarantees2_title;Law of Guarantees;;;;;;;;;;;;;
 law_of_guarantees2_desc;Amendments need to be made to the law about other nations we have come in control of.;;;;;;;;;;;;;
 maldives_protectorate_title;Maldives Protectorate;;;;;;;;;;;;;
-maldives_protectorate_desc;With our power over the Maldivian Sultanate we can force him to accept our indirect rule;;;;;;;;;;;;;
+maldives_protectorate_desc;With our power over the Maldivian Sultanate we can force him to accept our indirect rule.;;;;;;;;;;;;;
 become_kitara_title;Reform Kitara;;;;;;;;;;;;;
 become_kitara_desc;Our dominant position in the Great Lakes region gives us claim on the ancient Empire of Kitara.;;;;;;;;;;;;;
 spanish_restoration_2_title;Reclaim Gibraltar!;;;;;;;;;;;;;
