More Mustuhitos and a sprinkling of mikados (europeans loved that)

--- a/GFM/localisation/00_HPM_modifiers.csv
+++ b/GFM/localisation/00_HPM_modifiers.csv
@@ -501,7 +501,7 @@ protest_dances;Ee Ja Nai Ka Protest Dances;;;;;;;;;;;;;
 protest_dances_desc;Chaotic protest dances are causing a raucous in our cities.;;;;;;;;;;;;;
 dentoudou;Dentoudou;;;;;;;;;;;;;
 dentoudou_desc;Dentoudou, or "the way of tradition," is a government-sanctioned policy to protect traditional aspects of Japanese society and culture from Western influence. Its enforcement is vaguely defined, but the result is a Japan almost frozen in time culturally. Locals wear kimono, fashion their hair in the samurai chonmage style, live in homes invariably with Sino-Japanese architecture, and consume traditional Japanese media. Meanwhile, Japan's government and military structures are Westernized, and its technology and industry are advancing rapidly.;;;;;;;;;;;;;
-emperor_meiji;Emperor Meiji;;;;;;;;;;;;;
+emperor_meiji;Emperor Mutsuhito;;;;;;;;;;;;;
 japonisme;Japonisme;;;;;;;;;;;;;
 japonisme_desc;The West expresses curiosity and appreciation for our culture and society, frequently showing inspiration from it in their own artwork. This has allowed Japan to reach a level of prestige unprecedented among Eastern nations worldwide, defeating some negative impressions held toward us on account of us not being Westerners. Japanese culture has the potential to take the world by storm.;;;;;;;;;;;;;
 seifukuron;Seifukuron;;;;;;;;;;;;;
