--- a/GFM/localisation/FlavoursMod_decisions.csv
+++ b/GFM/localisation/FlavoursMod_decisions.csv
@@ -126,7 +126,7 @@ ara_rivadavia_desc;In order to modernize our navy to match our rivals, we should
 almirante_latorre_title;Order the Latorre-class Battleships;;;;;;;;;;;;;
 almirante_latorre_desc;In order to modernize our navy to match our rivals, we should acquire two modern battleships. The superiority of 'Dreadnought'-type battleships to other contemporary battleships is abundantly clear, we shall order two battleships, 'Almirante Latorre' and 'Almirante Cochrane'.;;;;;;;;;;;;;
 japan_fruits_title;Introduce Fruit Cultivation to Japan;;;;;;;;;;;;;
-japan_fruits_desc;Widespread cultivation of apples in Japan began in the Meiji Period, after fruits were introduced by Foreign Traders.;;;;;;;;;;;;;
+japan_fruits_desc;Widespread cultivation of apples in Japan began in the Meiji Period, after fruits were introduced by foreign traders.;;;;;;;;;;;;;
 found_suez_canal_company_eng_ai_title;Found the Suez Canal Company;;;;;;;;;;;;;
 found_suez_canal_company_eng_ai_desc;The prospect of building a canal in the Suez has grown a serious interest in the area and the potential profit it might bring. By establishing a $COUNTRY_ADJ$ Canal Company we can assert our dominance in Egypt and get a step closer to start building the canal.;;;;;;;;;;;;;
 ger_ai_banat_title;Incorporate Banat into $COUNTRY$;;;;;;;;;;;;;
