Craftsmen and bureaucrats fix split

--- a/GFM/localisation/0000Sitka.csv
+++ b/GFM/localisation/0000Sitka.csv
@@ -266,8 +266,10 @@ usa_mexico_agreement_title;The Treaty of San Antonio;;;;;;;;;;;;;
 usa_mexico_agreement_desc;The time has come to negotiate a peace treaty with the USA.;;;;;;;;;;;;;
 outside_italia_irredenta_ITS_title;Italia Irredenta;;;;;;;;;;;;;
 outside_italia_irredenta_ITA_desc;We can now claim more land for our Italian puppet.;;;;;;;;;;;;;
-craftsmen_fix_desc;Fix the craftsmen and bureaucrat bugs. The craftsmen bug is when you have a province that has craftsmen of a non-accepted culture and none of an accepted culture. It forces all promoting pops to become the culture of the craftsmen. The bureaucrats bug is even more annoying: bureaucrats of a non-accepted culture get paid by your government but don't add to administration efficiency, meaning that if that you're just throwing away money.;;;;;;;;;;;;;
-craftsmen_fix_title;Craftsmen & Bureaucrats bug fix;;;;;;;;;;;;;
+craftsmen_fix_desc;The craftsmen bug is when you have a province that has craftsmen of an unaccepted culture and none of an accepted culture. §RIt forces all unaccepted craftsmen to become farmers/laborers if they are on your cores or your colonies§!.;;;;;;;;;;;;;
+craftsmen_fix_title;Demote unaccepted/colonial craftsmen;;;;;;;;;;;;;
+bureaucrats_fix_desc;The bureaucrats bug is when you have a province that has bureaucrats of an unaccepted culture and none of an accepted culture, they get paid by you but don't actually increase your administration efficiency, so you're just throwing money away. §RIt forces all unaccepted bureaucrats to become farmers/laborers if they are on your cores or your colonies§!.;;;;;;;;;;;;;
+bureaucrats_fix_title;Demote unaccepted/colonial bureaucrats;;;;;;;;;;;;;
 incorporate_louisiana_title;Incorporate Louisiana;;;;;;;;;;;;;
 incorporate_louisiana_desc;§RGain 5 infamy§! Now that we have freed Louisiana from the Americans, we can incorporate it into our nation. The disastrous effects of its loss, first to the filthy French, then to the vile Americans, shall finally be reversed. We will certainly settle, develop and improve Louisiana more so than any power that has previously controlled.;;;;;;;;;;;;;
 you_arent_going_to_the_uk;UK Immigrant Debuff;;;;;;;;;;;;;
