--- a/GFM/localisation/00_HPM_decisions.csv
+++ b/GFM/localisation/00_HPM_decisions.csv
@@ -1996,10 +1996,16 @@ latin_monetary_union;Latin Monetary Union;;;;;;;;;;;;;
 desc_latin_monetary_union;Our country is a member of the Latin Monetary Union. We have standardized the weights and measures of our currencies as well as the precious metals content.;;;;;;;;;;;;;
 craftsmen_fix_cooldown;Craftsmen Fix Cooldown;;;;;;;;;;;;;
 craftsmen_fix_cooldown_desc;Craftsmen Fix Cooldown is 2 years.;;;;;;;;;;;;;
+bureaucrats_fix_cooldown;Bureaucrats Fix Cooldown;;;;;;;;;;;;;
+bureaucrats_fix_cooldown_desc;Bureaucrats Fix Cooldown is 2 years.;;;;;;;;;;;;;
 EVTNAME9999901;Craftsmen Exploit Salvage (Part 1);;;;;;;;;;;;;
-EVTDESC9999901;This event converts all non-core/non-accepted craftsmen into farmers if they are on your cores. Part 2 will spawn in 3 days, be sure to select this option FIRST.;;;;;;;;;;;;;
+EVTDESC9999901;This event converts all unaccepted craftsmen into farmers if they are on your cores or colonies. Part 2 will spawn in 3 days, be sure to select this option FIRST.;;;;;;;;;;;;;
 EVTNAME9999902;Craftsmen Exploit Salvage (Part 2);;;;;;;;;;;;;
 EVTDESC9999902;This event converts all 100% unemployed farmers into laborers.;;;;;;;;;;;;;
+EVTNAME9999903;Bureaucrats Exploit Salvage (Part 1);;;;;;;;;;;;;
+EVTDESC9999903;This event converts all unaccepted bureaucrats into farmers if they are on your cores or colonies. Part 2 will spawn in 3 days, be sure to select this option FIRST.;;;;;;;;;;;;;
+EVTNAME9999904;Bureaucrats Exploit Salvage (Part 2);;;;;;;;;;;;;
+EVTDESC9999904;This event converts all 100% unemployed farmers into laborers.;;;;;;;;;;;;;
 become_poland_lithuania_ruthenia_title;The Polish-Lithuania-Ruthenian Commonwealth;;;;;;;;;;;;;
 become_poland_lithuania_ruthenia_desc;With the Commonwealth reborn from the grave the people's of Ruthenia are again not under equal right's, the government has proposed a making of the Ruthenian duchy in which the Ruthenians will govern themselves and also doing a bit of changing to the constitution of our nation to make the eastern Slav's of Ruthenia be equal to the Polish and Lithuanian's. The reform's will transform our Polish Lithuanian Commonwealth into the Polish-Lithuanian-Ruthenian Commonwealth. Long live the new Commonwealth!;;;;;;;;;;;;;
 claim_lost_plc_lands_title;Reclaim the Lost Lands of the Commonwealth;;;;;;;;;;;;;
